--- a/src/overrides/Sidebar.astro
+++ b/src/overrides/Sidebar.astro
@@ -1,20 +1,21 @@
 ---
-import type { Props } from '@astrojs/starlight/props';
+// import type { Props } from '@astrojs/starlight/props';
 import Default from '@astrojs/starlight/components/Sidebar.astro';
 
 // Get the base path of the current URL
 // e.g. `/product-2/some-page/` returns `/product-2/`
-const currentBase = Astro.url.pathname.split('/').slice(0, 3).join('/');
+// const currentBase = Astro.url.pathname.split('/').slice(0, 3).join('/');
 
-// Filter our sidebar groups that do not include links to the current product.
-Astro.props.sidebar = Astro.props.sidebar
-  .filter((entry) => (
-    entry.type === 'group' &&
-    entry.entries.some(
-      (subEntry) => subEntry.type === 'link' && subEntry.href.startsWith(currentBase)
-    )
-  ));
+// // Filter our sidebar groups that do not include links to the current product.
+// Astro.props.sidebar = Astro.props.sidebar
+//   .filter((entry) => (
+//     entry.type === 'group' &&
+//     entry.entries.some(
+//       (subEntry) => subEntry.type === 'link' && subEntry.href.startsWith(currentBase)
+//     )
+//   ));
 // Reference: https://github.com/withastro/starlight/discussions/959#discussioncomment-10339254
 ---
 
-<Default {...Astro.props}><slot /></Default>
+<!-- <Default {...Astro.props}><slot /></Default> -->
+ <Default><slot /></Default>
